--- a/src/css/Homepage.css
+++ b/src/css/Homepage.css
@@ -2,6 +2,7 @@
   width: 100%;
   margin-top: 50px;
   position: relative;
+  margin-bottom: 60px;
 }
 
 /* Heading */
